crates/spelldawn/tests/it/core/snapshots/it__rules__action_tests__draw_card.snap
---
source: crates/spelldawn/tests/it/rules/action_tests.rs
assertion_line: 58
expression: "Summary::run(&response)"
---

command_list: 
    CreateOrUpdateCard: 
        card: 
            card_id: O1
            revealed_to_viewer: true
            is_face_up: false
            card_icons: 
                top_left_icon: "3"
                bottom_right_icon: "5"
            arena_frame: "<SpriteAddress>"
            owning_player: User
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Ice Dragon"
                rules_text: "<RulesText>"
                targeting: 
                valid_rooms: VaultSanctumCryptsRoomARoomBRoomCRoomDRoomE
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionRoom { room_id: Unspecified, room_location: Front }
        create_animation: DrawCard
    MoveGameObjects: 
        id: O1
        position: 
            sorting_key: 2
            position: ObjectPositionHand { owner: User }
    UpdateGameView: 
        user: 
            side: Overlord
            action_tracker: 2
        current_priority: User
        raid_active: false
channel_response: 
    CreateOrUpdateCard: 
        card: 
            card_id: O1
            revealed_to_viewer: false
            is_face_up: false
            card_icons: 
            arena_frame: "<SpriteAddress>"
            owning_player: Opponent
        create_position: 
            sorting_key: 4294967295
            position: ObjectPositionDeck { owner: Opponent }
        create_animation: Unspecified
    MoveGameObjects: 
        id: O1
        position: 
            sorting_key: 2
            position: ObjectPositionHand { owner: Opponent }
    UpdateGameView: 
        opponent: 
            side: Overlord
            action_tracker: 2
        current_priority: Opponent
        raid_active: false
