crates/spelldawn/tests/it/core/snapshots/it__rules__action_tests__gain_mana.snap
---
source: crates/spelldawn/tests/it/rules/action_tests.rs
assertion_line: 221
expression: summary

---

command_list: 
    UpdateGameView: 
        user: 
            side: Overlord
            mana: 6
            action_tracker: 2
        current_priority: User
        raid_active: false
channel_response: 
    UpdateGameView: 
        opponent: 
            side: Overlord
            mana: 6
            action_tracker: 2
        current_priority: Opponent
        raid_active: false
